# recola

./: .gitattributes  .gitignore  Cargo.toml  INPUT_LAG_ANALYSIS.md  NOTES.md  TODO.md  eph.sublime-workspace  gos.sublime-workspace  justfile
assets/recola/: props.json
assets/recola/audio/effects/: sfx-barrier.aup3  sfx-double_door.aup3  sfx-level_gate.aup3
assets/recola/audio/music/: consume.wav.asd  intro-1.wav.asd
assets/recola/audio/music/consume Project/: consume.als
assets/recola/audio/music/intro-1 Project/: intro-1.als
assets/recola/coverart/: cover_ld.xcf
assets/recola/intro_vid/: intro_vid.hiplc  stamp.blend  stamp.glb
assets/recola/levels/: level_1.blend  level_2.blend  level_3.blend  level_4.blend  level_5.blend  level_6.blend  level_test.blend  plazza.blend  recola.blend
assets/recola/props/: cable.blend  overgrowth.blend  props.blend
assets/recola/props/cable/: cable.hiplc
assets/recola/props/cable/hda/: dtw.cable.1.0.hdalc  dtw.cable_guides.1.0.hdalc
assets/recola/props/overgrowth/: overgrowth.hiplc
assets/recola/props/overgrowth/hda/: dtw.overgrowth.1.0.hdalc
assets/recola/text/: exhibition.json
crates/combat/: Cargo.toml
crates/combat/src/: lib.rs
crates/eph/: Cargo.toml
crates/eph/assets/: eph_tickers.txt
crates/eph/src/: eph_architect.rs  eph_main_window.rs  eph_mocca.rs  main.rs
crates/flowsim/: Cargo.toml
crates/flowsim/examples/: flow_sim_pipe_chain.rs  flow_sim_pump.rs  flow_sim_valve.rs
crates/flowsim/src/: chunk.rs  flow_net.rs  flow_net_solver.rs  fluid.rs  fluid_chunk.rs  lib.rs  ode.rs  pipe.rs  pipe_vessel.rs  port.rs  print.rs  reservoire_vessel.rs
crates/flowsim/src/models/: bundle.rs  junction.rs  mod.rs  tube_flow.rs  tube_pressure.rs
crates/flowsim/tests/: test_pipe_chain.rs  test_simple.rs
crates/gems/: Cargo.toml
crates/gems/src/: cycle.rs  ema.rs  fair_alloc.rs  geometry.rs  int_map.rs  kinematics.rs  lerp.rs  lib.rs  materials.rs  modifier.rs  rescale.rs  runge_kutta.rs  units.rs
crates/gos_common/: Cargo.toml
crates/gos_common/src/: protocol.rs
crates/goscl/: Cargo.toml
crates/goscl/src/: client.rs  common.rs  main.rs
crates/goscl/src/controller/: body_view_controller.rs  dev_view_controller.rs  dispatch.rs  inventory_controller.rs  inventory_item_command_controller.rs  mod.rs
crates/goscl/src/model/: mod.rs
crates/goscl/src/view/: body_view.rs  dev_view.rs  entity_list_view.rs  inventory_item_command_view.rs  inventory_view.rs  launcher.rs  mod.rs
crates/gosim/: Cargo.toml
crates/gosim/examples/: gosim_test1.rs
crates/gosim/src/: agent.rs  blood.rs  body_part.rs  consumption.rs  flow_net.rs  flow_sim.rs  gos_sim.rs  heart.rs  hunger.rs  inventory.rs  knowledge.rs  lib.rs  log.rs  lungs.rs  map.rs  market.rs  ops.rs  sim.rs  time.rs  toxicity.rs  waterfront.rs  weight.rs
crates/gosim/src/depr_flow_net/: flow_net_old.rs  mod.rs
crates/gosim/src/med/: blood_oxygen.rs  cardiac_cycle.rs  flow_net_solver.rs  geometry.rs  hb_o2_co2.rs  junction.rs  mod.rs  newton_root_solver.rs  pipe.rs  pipe_pressure.rs  tube_flow.rs  tube_pressure.rs  units.rs
crates/gosim/src/utils/: flecs_query_relation_helpers.rs  mod.rs  newtype_decimal_component.rs  stats.rs  test_runner.rs
crates/gosim/tests/: test_flow_net.rs
crates/gosrv/: Cargo.toml
crates/gosrv/src/: connect_server.rs  connection.rs  game_server.rs  internal_messages.rs  login_server.rs  main.rs  throttle.rs
crates/gossim_apps/: Cargo.toml
crates/gossim_apps/examples/: flow_net_line.rs  flow_net_pipe_chain.rs  flow_net_pump.rs  flow_net_valve.rss  flow_sim_pipe_chain.rs  flow_sim_pipe_chain.rss  flow_sim_valve.rs  gosim_test1.rs
crates/gossim_apps/src/: lib.rs  test_runner.rs
crates/gossim_apps/src/apps/: flow_net_line.rs  flow_net_pipe_chain.rs  flow_net_pump.rs  flow_net_valve.rs  flow_sim_pipe_chain.rs  flow_sim_valve.rs  mod.rs
crates/gossim_apps/tests/: test_flow_net.rs  test_flow_sim.rs
crates/mocca/: Cargo.toml
crates/mocca/src/: deps.rs  lib.rs  runner.rs
crates/puzzle_gen/: Cargo.toml
crates/puzzle_gen/src/: main.rs
crates/recola/: Cargo.toml
crates/recola/scripts/: package_release.py
crates/recola/src/: assets.rs  colliders.rs  custom_properties.rs  forge_gui.rs  foundation.rs  laser_pointer.rs  level.rs  main.rs  player.rs  recola_mocca.rs  rift.rs
crates/recola/src/collision/: collider_set.rs  collision_mocca.rs  kernel.rs  mod.rs  posed_cuboid.rs
crates/recola/src/forge_gui/: README.md  examples.rs  integration.rs
crates/recola/src/mechanics/: colliders.rs  material_swap.rs  mod.rs  switch.rs
crates/recola/src/props/: barrier.rs  door.rs  laser_pointer.rs  mod.rs  overgrowth.rs  rift.rs
crates/recola/src/style/: conversion.rs  examples.rs  hierarchy.rs  mocca.rs  mod.rs  types.rs
docs/: 2025-07-22-fair-alloc.nb  2025-07-24-flow-net.nb  2025-07-26-oxygen-transport.nb  2025-07-26-vessel-elasticity.nb  2025-07-28-flow.nb  2025-07-28-junction-flow.nb  2025-07-30-cardiac-cycle.nb  2025-07-31-vessel-tree.nb  2025-08-02-flow-pressure-model.nb  2025-08-02-heart.nb  2025-08-02-pressure-flow-volume-solver.nb  2025-08-06-flow-net-solver-debug.nb  2025-08-08-flow-sim-debug.nb
scripts/: app_build_3893320.vdf  blender_export_driver.py  blender_export_glb.py  blender_export_level.py  deploy_goscl.ps1  deploy_gosrv.ps1  depot_build_3893321.vdf  package_release.py
