# Copyright 2025 by David Weikersdorfer
[workspace]
resolver = "2"
members = [
  "crates/*",
]

# [profile.dev]
# debug = true

[workspace.dependencies]
approx = "0.5.1"
atom = { path = "../atuin/crates/atom/atom" }
bincode = { version = "2.0", features = ["serde"] }
candy = { path = "../atuin/crates/candy/candy" }
clap = { version = "4.5", features = ["derive"] }
combat = { path = "crates/combat" }
ctrlc = "3.4.7"
env_logger = { version = "0.11" }
eyre = "0.6"
gems = { path = "crates/gems" }
glam = { version = "0.30", features = ["serde"] }
log = "0.4"
magi = { path = "../atuin/crates/magi/magi" }
nalgebra = "0.34.0"
nng = "1.0"
num-traits = "0.2.19"
paste = "1.0.15"
profiling = "1.0"
prost = "0.13"
prost-build = "0.13"
ratatui = "0.29.0"
rust_decimal = { version = "1.37.2", features = ["macros", "maths"] }
rust_decimal_macros = { version = "1.37.1", features = ["reexportable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.4"
snap = "1.1"
steamworks = "0.12.0"
thiserror = "1.0"
tracy-client = { version = "0.18.2" }
tui-popup = "0.6.0"
typenum = "1.18.0"
