[package]
name = "gosim"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
flecs_ecs = { workspace = true }
flowsim = { workspace = true }
gems = { workspace = true }
log = { workspace = true }
mocca = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[features]
interactive = []
