[package]
name = "gosim"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = { workspace = true }
candy_scene_tree = { workspace = true }
candy_time = { workspace = true }
env_logger = { workspace = true }
excess = { workspace = true }
eyre = { workspace = true }
flowsim = { workspace = true }
gems = { workspace = true }
magi_gems = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
simplecs = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[features]
interactive = []
