[package]
name = "gosrv"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { workspace = true }
gos_common = { workspace = true }
eyre = { workspace = true }
ctrlc = { workspace = true }
log = { workspace = true }
slab = { workspace = true }
steamworks = { workspace = true }
bincode = { workspace = true }
