[package]
name = "gossim_apps"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { workspace = true }
eyre = { workspace = true }
flecs_ecs = { workspace = true }
gems = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
num-traits = { workspace = true }
approx = { workspace = true }
gosim = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[features]
interactive = []
