[package]
name = "recola"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
profiling = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slab = { workspace = true }
tracy-client = { workspace = true, optional = true }

atom = { workspace = true }
candy = { workspace = true }
gems = { workspace = true }
magi = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[features]
disco = []
profile-with-tracy = ["dep:tracy-client", "profiling/profile-with-tracy"]
